--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "1.5.0",
+    "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-rate-limit": "7.0.1",
@@ -24,7 +26,8 @@
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
