--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "1.5.0",
     "bcrypt": "5.1.1",
     "cookie-parser": "1.4.6",
